# accrual_sap

./: .dockerignore  .env.example  .gitignore  .vercelignore  AccrualSourceData.md  BTPIntegration.md  BlackLineIntegration.md  CLAUDE.md  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt
api/: index.py
docs/: ARCHITECTURE.md  SAP_SSO_ARCHITECTURE.md  presentation.md  user_prompt_history.md
docs/prompts/: accrual_analysis.md  payroll_analysis.md
expired_writeoff/: README.md  blackline_accrual_je.csv  blackline_accrual_je.json  expired_batches_extract.csv  generate.py
inventory_writedown/: README.md  blackline_je.json  generate.py  mb52_mbew_distressed.csv
mocksap/: mta.yaml  package-lock.json  package.json
mocksap/db/: schema.cds
mocksap/scripts/: seed_fi_journal_entries.py  seed_from_fixture.py  seed_mm_co.py  seed_plan.py
mocksap/srv/: api-batch-srv.cds  api-batch-srv.ts  api-costcenter-srv.cds  api-costcenterplan-srv.cds  api-material-valuation-srv.cds  api-opl-acctg-doc-item-cube-srv.cds  api-purchaseorder-process-srv.cds  api-stock-overview-srv.cds  server.ts
src/accrual_pipeline/: __init__.py  claude_client.py  config.py  inventory.py  main.py  models.py  normalizer.py  persistence.py  pipeline.py  plan.py  postback.py  router.py  run.py  writedown.py
tests/: test_claude_client.py  test_end_to_end.py  test_fetchers.py  test_normalizer.py  test_router.py
tests/fixtures/: co_cost_centers.json  fi_journal_entries.json  fi_payroll_lines.json  generate_payroll.py  plan_data.json  (+3 more)
web/: README.md  package-lock.json  package.json
(+54 files in other folders)
