[project]
name = "accrual-pipeline"
version = "0.1.0"
description = "Python/FastAPI mirror of an SAP BTP CPI accrual processing iFlow"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Eeshan" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "anthropic>=0.40",
    "jinja2>=3.1",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "mypy>=1.13",
]

[project.scripts]
accrual-run = "accrual_pipeline.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/accrual_pipeline"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/accrual_pipeline"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "respx.*"
ignore_missing_imports = true
